# rtc-tools-casadi-plugins

./: README.md  ci_local.py  pyproject.toml  run_pumped_hydropower.py
.github/workflows/: build_highs.yml
src/casadi_conic_highs/: CMakeLists.txt  bisect_highs_compat.py  build_highs_plugin.ps1  build_highs_plugin.sh
src/rtctools_highs/: __init__.py
