[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "rtctools-highs"
dynamic = ["version"]
license = { file = "LICENSE" }
description = "CasADi HiGHS solver plugin for RTC-Tools (pre-built binary wheel)."
readme = "README.md"
authors = [
    {name = "Deltares"}
]
maintainers = [
    {name = "Deltares"}
]
requires-python = ">=3.10"
# Exact pin: the compiled plugin is ABI-coupled to the CasADi version it was
# built against. CI patches this line at build time (sed) to match the
# casadi_version resolved for the run — do not rely on this literal value
# being current; it is a placeholder overwritten on every CI build.
dependencies = [
    "casadi==3.7.2",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
]

[project.urls]
Homepage = "https://github.com/rtc-tools/rtc-tools-casadi-plugins"
Issues = "https://github.com/rtc-tools/rtc-tools-casadi-plugins/issues"

[dependency-groups]
dev = [
    "pytest >= 8.2.0",
    "auditwheel >= 6.2.0",  # 6.2.0 added fnmatch/glob support to --exclude (PR #508)
    "delvewheel >= 1.9.0",
    "wheel >= 0.44",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
# Only the release tag (vX.Y.Z) carries the package version. A second,
# non-triggering tracking tag (highs-<H>-casadi-<C>) is pushed at the same
# commit by CI to record the exact HiGHS/CasADi pairing; it must be ignored
# here so it never gets picked up as a version source.
tag_regex = "^v(?P<version>[0-9]+\\.[0-9]+\\.[0-9]+)$"

[tool.hatch.build.targets.wheel]
packages = ["src/rtctools_highs"]
# cibuildwheel stages the compiled plugin (libcasadi_conic_highs.* and its
# runtime dependencies) into src/rtctools_highs/ before invoking the build
# backend. Use `artifacts` (not `include`) so hatchling picks up untracked files.
artifacts = [
    "/src/rtctools_highs/*.dll",
    "/src/rtctools_highs/*.so",
    "/src/rtctools_highs/*.dylib",
]

[tool.hatch.build.targets.sdist]
# Exclude sdist: the compiled binaries cannot be built from source by pip.
# Prevents pip falling back to a broken source build on unsupported platforms.
include = []
